--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
       </div>
     <footer>
-      <p>Copyright (c) 2017 debwatkins.tech All Rights Reserved.</p>
+      <p>Created by DebraWatkins.tech with <i class="fa fa-coffee" aria-hidden="true"></i>  Coffee and Code! <i class="fa fa-laptop" aria-hidden="true"></i>Copyright (c) 2017 All Rights Reserved.</p>
     </footer>
   </div>
   </body>
