--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Practice</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="container">
@@ -20,7 +21,7 @@
         </div>
       </div>
     <footer>
-      <p>Created by DebraWatkins.tech with <i class="fa fa-coffee" aria-hidden="true"></i>  Coffee and Code! <i class="fa fa-laptop" aria-hidden="true"></i>Copyright (c) 2017 All Rights Reserved.</p>
+      <p>Built with love for Jen's Birthday</p><p>Created by DebraWatkins.tech with <i class="fa fa-coffee" aria-hidden="true"></i>  Coffee and Code! <i class="fa fa-laptop" aria-hidden="true"></i><br>Copyright (c) 2017 All Rights Reserved.</p>
     </footer>
   </div>
   </body>
